<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.PhotoSelectorActivity">

    <TextView
        android:id="@+id/activity_photo_selector_index_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:layout_marginBottom="3dp"
        android:text="Demo X / n"/>

    <ImageView
        android:id="@+id/activity_photo_selector_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/activity_photo_selector_include_in_sync_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/activity_photo_selector_include_in_sync_checkbox" />

        <CheckBox
            android:id="@+id/activity_photo_selector_exclude_globally_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/activity_photo_selector_exclude_globally_checkbox" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <Button
            android:id="@+id/activity_photo_selector_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_photo_selector_back" />

        <Button
            android:id="@+id/activity_photo_selector_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_photo_selector_next" />

    </LinearLayout>

</LinearLayout>
