<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- Pseudo toolbar workaround -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"></LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <!--<TextView-->
    <!--android:id="@+id/fragment_dashboard_totalSelectedFoldersInfoTextView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/fragment_dashboard_total_selected_folders_info"-->
    <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--<TextView-->
    <!--android:id="@+id/fragment_dashboard_totalFileAmountTextView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/fragment_dashboard_total_amount_of_files"-->
    <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--<TextView-->
    <!--android:id="@+id/fragment_dashboard_newSelectedFoldersInfoTextView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/fragment_dashboard_new_folders_since_last_sync"-->
    <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--<TextView-->
    <!--android:id="@+id/fragment_dashboard_newFileAmountTextView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/fragment_dashboard_new_files_since_last_sync"-->
    <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--<TextView-->
    <!--android:id="@+id/fragment_dashboard_lastSyncTextView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/fragment_dashboard_last_sync"-->
    <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_totalSelectedFolders_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/fragment_dashboard_total_selected_folders_info"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_dashboard_totalSelectedFoldersInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:textSize="17sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_totalAmountOfFiles_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/fragment_dashboard_total_amount_of_files"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_dashboard_totalFileAmountTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:textSize="17sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_lastSync_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/fragment_dashboard_last_sync"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_dashboard_lastSyncTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:textSize="17sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_goToFolderSelection_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements3"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/fragment_dashboard_go_to_folder_selection"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/fragment_dashboard_goToFolderSelection_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:padding="3dip"
                            android:text="@string/fragment_dashboard_go_to_folder_selection_yes" />

                        <Button
                            android:id="@+id/fragment_dashboard_goToFolderSelectionHide_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:padding="3dip"
                            android:text="@string/fragment_dashboard_go_to_folder_selection_hide" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_refreshData_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements3"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/fragment_dashboard_refresh_data_selection"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <ImageButton
                        android:id="@+id/fragment_dashboard_refreshData_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/fragment_dashboard_refresh_data_selection"
                        android:padding="3dip"
                        android:src="@drawable/ic_refresh_black_24dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_newFolders_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dip"
                        android:text="@string/fragment_dashboard_new_folders_since_last_sync"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_dashboard_newSelectedFoldersInfoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:textSize="17sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_newFiles_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/fragment_dashboard_new_files_since_last_sync"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_dashboard_newFileAmountTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:textSize="17sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_dashboard_syncButton_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorDashboardElements2"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_dashboard_sync_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/fragment_dashboard_sync_text_view"
                        android:textSize="17sp"
                        android:textStyle="italic" />

                    <ImageButton
                        android:id="@+id/fragment_dashboard_sync_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/fragment_dashboard_sync_btn"
                        android:padding="3dip"
                        android:src="@drawable/ic_sync_black_24dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
